--- a/nginx/nginx_site.conf
+++ b/nginx/nginx_site.conf
@@ -1,17 +1,14 @@
-server {
-    listen               80;
-    listen                   [::]:80;
-    server_name          <SERVER_HOSTNAME>;
-    return 301 https://$server_name$request_uri;
-}
+ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+ssl_prefer_server_ciphers on;
+ssl_session_cache shared:SSL:10m;
+ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 80;
+    listen [::]:80;
 
     server_name <SERVER_HOSTNAME>;
-    ssl_certificate /etc/nginx/ssl/<SERVER_HOSTNAME>.crt;
-    ssl_certificate_key /etc/nginx/ssl/<SERVER_HOSTNAME>.key;
 
     client_max_body_size 64M;
     client_body_buffer_size 128k;
@@ -37,6 +34,6 @@ server {
         fastcgi_param HTTPS on;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param REDIRECT_STATUS 200;
-        fastcgi_pass unix:/var/run/php5-fpm/fpm.sock;
+        fastcgi_pass wiki:8888;
     }
 }
