--- a/wiki/Dockerfile
+++ b/wiki/Dockerfile
@@ -9,8 +9,6 @@ RUN apt-get update -q &&\
       imagemagick \
       vim
 
-VOLUME ["/var/run/php5-fpm", "/wiki"]
-
 ENV DOKUWIKI_VERSION=2015-08-10a
 # Verify the checksum since their SSL cert is invalid for HTTPS
 ENV DOKUWIKI_SHA256SUM=98f0868c0cf9fc6664b57f89149fa537b73222bcc010247771e4afc08c8199fd
@@ -23,8 +21,13 @@ RUN cd /opt &&\
     chown www-data.www-data -R dokuwiki &&\
     rm dokuwiki*.tgz
 
+EXPOSE 8888
+
+RUN mkdir /wiki/ && cp -r /opt/dokuwiki/data /wiki/data
+VOLUME ["/wiki"]
+
 COPY local.php users.auth.php /opt/dokuwiki/conf/
-VOLUME "/opt/dokuwiki"
+VOLUME ["/opt/dokuwiki"]
 
 COPY www.conf /etc/php5/fpm/pool.d/www.conf
 COPY entrypoint /entrypoint
