--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   wiki:
     build: ./wiki
     volumes:
-      - data:/wiki/data
+      - data:/wiki
   nginx:
     build: ./nginx
     volumes_from:
